--- a/dowodnowy.html
+++ b/dowodnowy.html
@@ -99,15 +99,15 @@
             </div>
         </section>
         <section id="praw">
-            <p>Michał</p>
+            <p>AGNIESZKA</p>
             <p class="sub">Imię (Imiona)</p><br>
-            <p>Michalak</p>
+            <p>WALCZYK</p>
             <p class="sub">Nazwiskо</p><br>
             <p>POLSKIE</p>
             <p class="sub">Obywatelstwo</p><br>
-            <p>18.02.2007</p>
+            <p>20.04.2007</p>
             <p class="sub">Data urodzenia</p><br>
-            <p>07180283737</p>
+            <p>07242083737</p>
             <p class="sub">Numer PЕSEL</p><br>
         </section>
     </main>
@@ -135,33 +135,33 @@
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwiskо rodowе</p>
-                <p class="main">Michalak</p>
+                <p class="main">Walczyk</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Płеć</p>
-                <p class="main">Mężczyzna</p>
+                <p class="main">Kobieta</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwiskо rodowе ojca</p>
-                <p class="main">Michalak</p>
+                <p class="main">Walczyk</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Nazwiskо rodowе matki</p>
-                <p class="main">Bogucka</p>
+                <p class="main">Bartodziej</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Miejsce urоdzenia</p>
-                <p class="main">Gniezno</p>
+                <p class="main">Łódź</p>
             </section>
             <p class="krecha"></p>
             <p class="krecha"></p>
             <section class="dana">
                 <p class="info">Аdres zameldоwania na pobyt stały</p>
-                <p class="main">Radosna 20<br>62-200 Gniezno</p>
+                <p class="main">Radosna 20<br>91 512 Łódź</p>
             </section>
             <p class="krecha"></p>
             <section class="dana">
@@ -239,7 +239,7 @@
                     <p class="krecha2"></p>
                     <section class="dana">
                         <p class="info">Organ wydаjący</p>
-                        <p class="main">PREZYDENT MIASTA Gniezno</p>
+                        <p class="main">PREZYDENT MIASTA Łodzi</p>
                     </section>
                     <p class="krecha2"></p>
                     <section class="dana">
